--- a/Print-it-JS-main/index.html
+++ b/Print-it-JS-main/index.html
@@ -23,6 +23,10 @@
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
+			<div id="dot1" class="dot dot_selected"></div>
+			<div id="dot2" class="dot"></div>
+			<div id="dot3" class="dot"></div>
+			<div id="dot4" class="dot"></div>
 		</div>
 	</div>
 	<section id="about-us" class="container">
