--- a/Print-it-JS-main/index.html
+++ b/Print-it-JS-main/index.html
@@ -18,15 +18,11 @@
 </header>
 <main>
 	<div id="banner">
-		<img src="assets/images/arrow_left.png" onclick="plusSlides(1)" alt="Left Arrow" class="arrow arrow_left">
-		<img src="assets/images/arrow_right.png" alt="Right Arrow" class="arrow arrow_right">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p id="tagLine">Impressions tous formats <span>en boutique et en ligne</span></p>
+		<img src="./assets/images/arrow_left.png" alt="Left Arrow" class="arrow arrow_left">
+		<img src="./assets/images/arrow_right.png" alt="Right Arrow" class="arrow arrow_right">
+		<img class="banner-img" alt="Banner Print-it">
+		<p id="tagLine"></p>
 		<div class="dots">
-			<div id="dot1" class="dot dot_selected"></div>
-			<div id="dot2" class="dot"></div>
-			<div id="dot3" class="dot"></div>
-			<div id="dot4" class="dot"></div>
 		</div>
 	</div>
 	<section id="about-us" class="container">
